@@ -14,6 +14,7 @@ import org.springframework.http.MediaType;
 import org.springframework.restdocs.payload.JsonFieldType;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
@@ -43,17 +44,18 @@ public class DsrCalcApiControllerDocsTest extends RestDocsSupport {
         loanStatus.setRepaymentType(RepaymentType.AMORTIZING);
         loanStatus.setLoanType(LoanType.MORTGAGE);
         loanStatus.setPrincipal(300000000.0);
+
         loanStatus.setMaturityPaymentAmount(0.0);
         loanStatus.setTerm(360);
         loanStatus.setGracePeriod(0);
         loanStatus.setInterestRatePercentage(3.5);
-        request.getLoanStatusList().add(loanStatus);
+        request.getLoanStatuses().add(loanStatus);
         request.setAnnualIncome(50000000);
 
         DsrCalcResponse response = DsrCalcResponse.builder()
             .annualIncome(50000000)
             .totalLoanCount(1)
-            .dsrCalcResultList(Arrays.asList(
+            .dsrCalcResults(List.of(
                 new DsrCalcResult(1, 300000000, 295000000, 360, 5000000, 10500000)
             ))
             .finalDsrRatio(31.0)
@@ -73,11 +75,11 @@ public class DsrCalcApiControllerDocsTest extends RestDocsSupport {
                 preprocessRequest(prettyPrint()),
                 preprocessResponse(prettyPrint()),
                 requestFields(
-                    fieldWithPath("loanStatusList").type(JsonFieldType.ARRAY)
+                    fieldWithPath("loanStatuses").type(JsonFieldType.ARRAY)
                         .description("대출 상태 목록"),
-                    fieldWithPath("loanStatusList[].repaymentType").type(JsonFieldType.STRING)
+                    fieldWithPath("loanStatuses[].repaymentType").type(JsonFieldType.STRING)
                         .description("상환 유형 (BULLET: 일시상환, AMORTIZING: 원리금균등분할상환, EQUAL_PRINCIPAL: 원금균등분할상환)"),
-                    fieldWithPath("loanStatusList[].loanType").type(JsonFieldType.STRING)
+                    fieldWithPath("loanStatuses[].loanType").type(JsonFieldType.STRING)
                         .description("대출 유형 (MORTGAGE: 주택담보대출, INTERIM_PAYMENT_AND_MOVING: 중도금 및 이주비, " +
                             "OFFICETEL_MORTGAGE_LOAN: 오피스텔담보대출, JEONSE_LOAN: 전세대출, " +
                             "JEONSE_DEPOSIT_COLLATERAL_LOAN: 전세보증금담보대출, PERSONAL_LOAN: 신용대출, " +
@@ -86,15 +88,15 @@ public class DsrCalcApiControllerDocsTest extends RestDocsSupport {
                             "DEPOSIT_AND_INSURANCE_COLLATERAL_LOAN: 예적금 담보 및 보험계약 대출, " +
                             "SECURITIES_COLLATERAL_LOAN: 유가증권 담보대출, LONG_TERM_CARD_LOAN: 장기카드대출, " +
                             "OTHER_LOAN: 기타대출)"),
-                    fieldWithPath("loanStatusList[].principal").type(JsonFieldType.NUMBER)
+                    fieldWithPath("loanStatuses[].principal").type(JsonFieldType.NUMBER)
                         .description("원금"),
-                    fieldWithPath("loanStatusList[].maturityPaymentAmount").type(JsonFieldType.NUMBER)
+                    fieldWithPath("loanStatuses[].maturityPaymentAmount").type(JsonFieldType.NUMBER)
                         .description("만기상환금액"),
-                    fieldWithPath("loanStatusList[].term").type(JsonFieldType.NUMBER)
+                    fieldWithPath("loanStatuses[].term").type(JsonFieldType.NUMBER)
                         .description("기간(개월수)"),
-                    fieldWithPath("loanStatusList[].gracePeriod").type(JsonFieldType.NUMBER)
+                    fieldWithPath("loanStatuses[].gracePeriod").type(JsonFieldType.NUMBER)
                         .description("거치기간"),
-                    fieldWithPath("loanStatusList[].interestRatePercentage").type(JsonFieldType.NUMBER)
+                    fieldWithPath("loanStatuses[].interestRatePercentage").type(JsonFieldType.NUMBER)
                         .description("연이자율(%)"),
                     fieldWithPath("annualIncome").type(JsonFieldType.NUMBER)
                         .description("연간 소득")
@@ -112,19 +114,19 @@ public class DsrCalcApiControllerDocsTest extends RestDocsSupport {
                         .description("연간 소득"),
                     fieldWithPath("data.totalLoanCount").type(JsonFieldType.NUMBER)
                         .description("총 대출 건수"),
-                    fieldWithPath("data.dsrCalcResultList").type(JsonFieldType.ARRAY)
+                    fieldWithPath("data.dsrCalcResults").type(JsonFieldType.ARRAY)
                         .description("DSR 계산 결과 목록"),
-                    fieldWithPath("data.dsrCalcResultList[].serial").type(JsonFieldType.NUMBER)
+                    fieldWithPath("data.dsrCalcResults[].serial").type(JsonFieldType.NUMBER)
                         .description("일련번호"),
-                    fieldWithPath("data.dsrCalcResultList[].principal").type(JsonFieldType.NUMBER)
+                    fieldWithPath("data.dsrCalcResults[].principal").type(JsonFieldType.NUMBER)
                         .description("원금"),
-                    fieldWithPath("data.dsrCalcResultList[].balance").type(JsonFieldType.NUMBER)
+                    fieldWithPath("data.dsrCalcResults[].balance").type(JsonFieldType.NUMBER)
                         .description("잔액"),
-                    fieldWithPath("data.dsrCalcResultList[].term").type(JsonFieldType.NUMBER)
+                    fieldWithPath("data.dsrCalcResults[].term").type(JsonFieldType.NUMBER)
                         .description("기간"),
-                    fieldWithPath("data.dsrCalcResultList[].annualPrincipalRepayment").type(JsonFieldType.NUMBER)
+                    fieldWithPath("data.dsrCalcResults[].annualPrincipalRepayment").type(JsonFieldType.NUMBER)
                         .description("연간 원금 상환액"),
-                    fieldWithPath("data.dsrCalcResultList[].annualInterestRepayment").type(JsonFieldType.NUMBER)
+                    fieldWithPath("data.dsrCalcResults[].annualInterestRepayment").type(JsonFieldType.NUMBER)
                         .description("연간 이자 상환액"),
                     fieldWithPath("data.finalDsrRatio").type(JsonFieldType.NUMBER)
                         .description("최종 DSR 비율")
